CHANGES

 - DBIx run and run-lane status update: ensure duplicate records are not created
     allow to create a record for a status that is already current if the date
     of the new record is earlier that the current status date
 - status monitor bug fixes

release 77.9
 - DBIx run and run-lane status update refactoring to accommodate passing
     status date and make setting these two status types symmetrical
 - initial code for monitoring status files
 - bug fix in inferring recalibrated path from the runfolder path - previously
     the code returned basecalls directory path before getting to the recalibrated path
 - following psd dev url change, update regular expression in the reflector url filter

release 77.8
 - npg dev url is set to the url of the dev server that is actually used for API calls
 - psd next release dev url replaced with training url, RT#412417
 - wrapper object for the status and a script to write status to a file
 - dual index refinements: ensure max length of "Index" used by MiSeq is the split
 - dual indexes' size, and use custom default_expected_tag in preference to Index{,2}
   when using samplesheet as source of LIMS info
 - ensure samplesheet testing works without WTSI filesystem
 - instrument location tests skipped if host name is too long
     (TODO - increase db field size)
 - travis ci configuration file added
 - mysql db test configuration - password removed so that this configuration
     can be used on travis ci
 - implicit dependency on DBD::mysql driver made explicit to ensure all
     dependencies are built on travis ci server

release 77.7
 - run in progress tracking:
     look for lane sub-directories in the BaseCalls directory if none found in the Intensities directory;
     check for existence of a RTAComplete.txt file rather that a ImageAnalysis_Netcopy_complete_Read#.txt file

release 77.6
 - added code to generate HiSeqX runfolder names
 - updated list of directories to search for cycle sub-directories

release 77.5